codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_reset_popup_states.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "states.join(\"\\n---\\n\")"
---
  用 量 限 制 重 置
  正 在 检 查 可 用 的 重 置 机 会 ……

›    正 在 加 载 ……

  按  enter 确 认 ， 或 按  esc 返 回
---
  用 量 限 制 重 置
  有  2 次 可 用 的 重 置 机 会 。

› 1. Full reset (Weekly + 5 hr)  到 期 时 间 ： 2026-06-18 09:39.
  2. Full reset (Weekly + 5 hr)  到 期 时 间 ： 2026-06-27 08:59.
  3. 取 消

  按  enter 确 认 ， 或 按  esc 返 回
---
  用 量 限 制 重 置
  你 没 有 可 用 的 用 量 限 制 重 置 机 会 。

› 1. 关 闭

  按  enter 确 认 ， 或 按  esc 返 回
---
  用 量 限 制 重 置
  无 法 加 载 用 量 限 制 重 置 机 会 ， 请 重 试 。

› 1. 重 试
  2. 关 闭

  按  enter 确 认 ， 或 按  esc 返 回
---
  用 量 限 制 重 置
  正 在 重 置 用 量 ……

›    正 在 使 用 重 置 机 会 ……
---
  用 量 限 制 重 置
  无 法 重 置 用 量 ， 请 重 试 。

› 1. 重 试
  2. 关 闭

  按  enter 确 认 ， 或 按  esc 返 回
---
  用 量 限 制 重 置
  你 当 前 的 用 量 无 需 重 置 。

› 1. 关 闭

  按  enter 确 认 ， 或 按  esc 返 回
---
  用 量 限 制 重 置
  没 有 可 用 的 用 量 限 制 重 置 机 会 。

› 1. 关 闭

  按  enter 确 认 ， 或 按  esc 返 回
---
  用 量 限 制 重 置
  用 量 已 重 置 。 正 在 检 查 剩 余 的 重 置 机 会 ……

›    正 在 刷 新 ……
---
  用 量 限 制 重 置
  用 量 已 重 置 。 你 还 剩  1 次 重 置 机 会 。

› 1. 关 闭

  按  enter 确 认 ， 或 按  esc 返 回
