codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_during_mcp_startup.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: "render_bottom_popup(&chat, 80)"
---
  选 择 审 查 预 设

› 1. 与 基 准 分 支 比 较 审 查   （ PR 风 格 ）
  2. 审 查 未 提 交 的 更 改
  3. 审 查 某 个 提 交
  4. 自 定 义 审 查 说 明

  按  enter 确 认 ， 或 按  esc 返 回
